# sanka-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
fern/: fern.config.json  generators.yml
scripts/: generate_sdk.sh
src/sanka_sdk/: __init__.py  client.py  environment.py
src/sanka_sdk/absences/: client.py  raw_client.py
src/sanka_sdk/activity_logs/: client.py  raw_client.py
src/sanka_sdk/ai/: client.py  raw_client.py
src/sanka_sdk/approval_requests/: client.py  raw_client.py
src/sanka_sdk/associations/: client.py  raw_client.py
src/sanka_sdk/attendance_records/: client.py  raw_client.py
src/sanka_sdk/bills/: client.py  raw_client.py
src/sanka_sdk/calendar/: client.py  raw_client.py
src/sanka_sdk/companies/: client.py  raw_client.py
src/sanka_sdk/contacts/: client.py  raw_client.py
src/sanka_sdk/core/: client_wrapper.py
src/sanka_sdk/custom_objects/: client.py  raw_client.py
src/sanka_sdk/deals/: client.py  raw_client.py
src/sanka_sdk/disbursements/: client.py  raw_client.py
src/sanka_sdk/employees/: client.py  raw_client.py
src/sanka_sdk/errors/: bad_gateway_error.py  forbidden_error.py  service_unavailable_error.py  unauthorized_error.py  unprocessable_entity_error.py
src/sanka_sdk/estimates/: client.py  raw_client.py
src/sanka_sdk/expenses/: client.py  raw_client.py
src/sanka_sdk/exports/: client.py  raw_client.py
src/sanka_sdk/files/: client.py  raw_client.py
src/sanka_sdk/imports/: client.py  raw_client.py
src/sanka_sdk/incentives/: client.py  raw_client.py
src/sanka_sdk/invoices/: client.py  (+1 more)
(+504 files in other folders)
