[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "sanka-sdk"
version = "0.1.2"
description = "Python SDK for the Sanka API."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Sanka" }
]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "typing-extensions>=4.9"
]

[project.urls]
Homepage = "https://sanka.com"
Repository = "https://github.com/sankaHQ/sanka-python"

[dependency-groups]
dev = [
  "ruff>=0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sanka_sdk"]

[tool.hatch.build.targets.sdist]
include = [
  "README.md",
  "pyproject.toml",
  "src/sanka_sdk",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
"src/sanka_sdk/**/*.py" = ["E402", "E711", "E721", "E722", "F841"]
